--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <div class="navRight flex p-3">
             <ul class="flex gap-8 justify-between ">
               <li class="hover:cursor-pointer hover:text-gray-300"><a href="">Alarm</a></li>
-              <li class="hover:cursor-pointer hover:text-gray-300"><a href="">Stopwatch</a></li>
+              <li class="hover:cursor-pointer hover:text-gray-300"><a href="/src/Components/stopwatch.html">Stopwatch</a></li>
               <li class="hover:cursor-pointer hover:text-gray-300"><a href="">Wrld Clock</a></li>
               <li class="hover:cursor-pointer hover:text-gray-300"><a href="">Timer</a></li>
               <li class="hover:cursor-pointer hover:text-gray-300"><a href="">Pomodoro</a></li>
